# country-code

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pycountrycode/: __init__.py  countryData.py  countryData.txt  country_data.py  countrycode.py  pycountrycode.py
pycountrycode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
