[project]
name = "pycountrycode"
version = "1.1.8"
authors = [
  { name="Andile Jaden Mbele", email="andilembele020@gmail.com" },
]
description="A neat country call code retriever"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xeroxzen/country-code"
Issues = "https://github.com/xeroxzen/country-code/issues"